workflow for new students

--- a/src/app/controls/common/app-date/app-date.control.html
+++ b/src/app/controls/common/app-date/app-date.control.html
@@ -1,4 +1,5 @@
 <my-date-picker id="date" class="app-date-picker"
   [(ngModel)]="model"
   [options]="{dateFormat: dateFormat}"
+  [disabled]="!editable"
   (dateChanged)="onDateChange($event)"></my-date-picker>
