--- a/src/app/controls/common/app-select/app-select.control.html
+++ b/src/app/controls/common/app-select/app-select.control.html
@@ -1,4 +1,4 @@
-<select class="app-select-control" [(ngModel)]="value" (change)="onValueChange($event.target.value)">
+<select class="app-select-control" [(ngModel)]="value" (change)="onValueChange($event.target.value)" [disabled]="!editable">
   <option *ngFor="let item of getItems()" [value]="item.value">
     {{item.name === '-' ? item.value : item.name}}
   </option>
