--- a/src/app/pages/new-students/card/pages/actions/new-student-card-actions.page.less
+++ b/src/app/pages/new-students/card/pages/actions/new-student-card-actions.page.less
@@ -4,13 +4,15 @@
   display: flex;
   flex-direction: row;
 
-  width: 100%;
+  width: 90%;
 
   padding: @app-size-2;
 
   border-radius: @app-size-1;
 
   background: @color-fill_basic_light;
+
+  margin-bottom: @app-size-0-5;
 }
 
 .new-student-card-actions-action-column {
