--- a/src/styles/modal/app-modal.less
+++ b/src/styles/modal/app-modal.less
@@ -54,6 +54,13 @@
   background: @color-fill_basic_subtle;
 }
 
+.app-modal-section-header {
+  .app-font-bold;
+
+  font-size: @font-large;
+  color: @color-fill_text_basic_accent;
+}
+
 .app-modal-body {
   flex-grow: 1;
 
