--- a/src/app/controls/selects/staff-member/app-select-staff-member.control.html
+++ b/src/app/controls/selects/staff-member/app-select-staff-member.control.html
@@ -2,5 +2,6 @@
   [valueString]="staffMemberLogin"
   [items]="items"
   [hasEmpty]="true"
+  [editable]="editable"
   (onChangeString)="onValueChanged($event)">
 </app-select-control>
