--- a/src/app/controls/selects/time/app-select-time.control.html
+++ b/src/app/controls/selects/time/app-select-time.control.html
@@ -2,5 +2,6 @@
   [valueString]="value"
   [items]="items"
   [hasEmpty]="true"
+  [editable]="editable"
   (onChangeString)="onValueChanged($event)">
 </app-select-control>
