student on-boarding request was always created with today's date

--- a/src/app/pages/new-students/card/pages/new/new-student-card-new.page.html
+++ b/src/app/pages/new-students/card/pages/new/new-student-card-new.page.html
@@ -108,7 +108,7 @@
             [dateLabel]="'Дата'"
             [timeLabel]="'Время'"
             [dateAndTime]="getDateAndTime(studentOnBoarding.action.info.actionTime)"
-            (onChange)="onActionDateAndTimeChange($event)">
+            (onChange)="studentOnBoarding.action.info.actionTime = fromDateAndTime($event)">
           </app-form-date-and-time-control>
         </app-form-input-control>
 
